tui/src/snapshots/codex_tui__projects_overlay__tests__projects_overlay_limits_details_width_when_not_maximized.snap
---
source: tui/src/projects_overlay.rs
expression: rendered
---
main  .codexpotter/projects/2026/04/16/1/MAIN.md

word00 word01 word02 word03 word04 word05 word06 word07 word08 word09 word10 word11 word12 word13
word14 word15 word16 word17 word18 word19
