tui/src/snapshots/codex_tui__projects_overlay__tests__projects_overlay_narrow_width_keeps_project_row_compact.snap
---
source: tui/src/projects_overlay.rs
expression: terminal.backend()
---
"                                        "
"┃ ✓ 12 rounds    .codexpotter/          "
"┃   Add          projects/2026/04/16/1  "
"┃   projects…    23456/MAIN.md          "
"                                        "
"                 ROUND 1 @ 1 minute     "
"                 ago                    "
"                                        "
"                 Done                   "
"                                        "
"                                        "
"  Esc  Tab maximize  ↑↓ ⇧↑↓ ^U/^D       "
