tui/src/snapshots/codex_tui__projects_overlay__tests__projects_overlay_renders_empty_projects_list.snap
---
source: tui/src/projects_overlay.rs
expression: terminal.backend()
---
"                                                                                "
"No projects found under .code   No projects found under .codexpotter/projects   "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  Esc close  Tab maximize  ↑↓ switch  shift+↑↓ scroll  ctrl+u/d page            "
