tui/src/snapshots/codex_tui__projects_overlay__tests__projects_overlay_renders_left_list_pager.snap
---
source: tui/src/projects_overlay.rs
expression: terminal.backend()
---
"                                                            "
"┃ ✓ 1 round · 1 minut   Loading project details...          "
"┃   Paged project 1                                         "
"                                                            "
"  ✓ 1 round · 1 minut                                       "
"    Paged project 2                                         "
"                                                            "
"  ✓ 1 round · 1 minut                                       "
"    Paged project 3                                         "
"                                                            "
"         ▪▫▫                                                "
"  Esc  Tab maximize  ↑↓ switch ⇧↑↓ scroll ^U/^D page        "
