tui/src/snapshots/codex_tui__projects_overlay__tests__projects_overlay_renders_list_and_details.snap
---
source: tui/src/projects_overlay.rs
expression: terminal.backend()
---
"                                                                                "
"┃ ✓ 4 rounds · 1 minute ago     main  .codexpotter/projects/2026/04/16/1/       "
"┃   Add projects overlay        MAIN.md                                         "
"                                                                                "
"                                Task line 1                                     "
"                                Task line 2                                     "
"                                Task line 3                                     "
"                                Task line 4                                     "
"                                Task line 5                                     "
"                                ... (10 more lines)                             "
"                                                                                "
"                                ROUND 1 (took 30m 43s) @ 1 minute ago           "
"                                                                                "
"                                Done                                            "
"                                                                                "
"                                                                                "
"                                                                                "
"  Esc close  Tab maximize  ↑↓ switch  shift+↑↓ scroll  ctrl+u/d page            "
