tui/src/snapshots/codex_tui__projects_overlay__tests__projects_overlay_renders_loading_project_details.snap
---
source: tui/src/projects_overlay.rs
expression: terminal.backend()
---
"                                                                                "
"┃ ✓ 1 round · 1 minute ago      Loading project details...                      "
"┃   Loading details state                                                       "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  Esc close  ↑↓ switch  shift+↑↓ scroll  ctrl+u/d page                          "
