tui/src/snapshots/codex_tui__projects_overlay__tests__projects_overlay_renders_loading_projects.snap
---
source: tui/src/projects_overlay.rs
expression: terminal.backend()
---
"                                                                                "
"Loading projects...             Loading projects...                             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  Esc close  Tab maximize  ↑↓ switch  shift+↑↓ scroll  ctrl+u/d page            "
