tui/src/snapshots/codex_tui__projects_overlay__tests__projects_overlay_renders_maximized_details_full_width.snap
---
source: tui/src/projects_overlay.rs
expression: terminal.backend()
---
"                                                                                "
"  .codexpotter/projects/2026/04/16/1/MAIN.md                                    "
"                                                                                "
"  ROUND 1 @ 1 minute ago                                                        "
"                                                                                "
"  Done                                                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  Esc close  Tab exit maximize  ↑↓ switch  shift+↑↓ scroll  ctrl+u/d page       "
