tui/src/snapshots/codex_tui__projects_overlay__tests__projects_overlay_renders_projects_list_error.snap
---
source: tui/src/projects_overlay.rs
expression: terminal.backend()
---
"                                                                                "
"Failed to load projects list:   Failed to load projects list:                   "
"permission denied               permission denied                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  Esc close  Tab maximize  ↑↓ switch  shift+↑↓ scroll  ctrl+u/d page            "
